# SL

./: cam_voice_rec.py  create_combined_logo.py  enroll_new.py  face_recognition_new.py  main_sl.py  main_sl_new.py  page_0.py  page_1.py  page_2.py  page_3.py  page_4.py  page_5.py  page_6.py  page_7.py  page_8.py  page_9.py  pp.py  ppp.py  pyproject.toml  reference_embedding.pkl  save_enrollment.py  settings.py  streamlit_app.py  voice_embedding.pkl
.streamlit/: config.toml
faceenv/Scripts/: activate  activate.bat
